--- a/portfolio/src/components/Nav/nav.css
+++ b/portfolio/src/components/Nav/nav.css
@@ -8,7 +8,15 @@
     position: sticky;
     top:0;
     color:#fff;
-    
+    float :right;
+    overflow: hidden;
+    justify-content: space-between;
+}
+
+button {
+    position: sticky;
+    top:0;
+    right:0;
 }
 
 #nav-titles {
@@ -19,6 +27,7 @@
 #sider {
     position:fixed;
     height: 1000px;
+    background-color: #fff;
 }
 
 #content {
