--- a/portfolio/src/pages/Home/home.css
+++ b/portfolio/src/pages/Home/home.css
@@ -1,7 +1,16 @@
 @import 'antd/dist/antd.css';
 
+#about-button {
+    color:#fff;
+}
+
+button {
+    color:#fff;
+}
+
 #content {
     height:1000px;
+    width:100%;
     padding-left: 80px;
     top:60px;
 }
@@ -19,13 +28,17 @@
     /* perspective: 1000px; */
     perspective-origin: 50% 50%;
     animation: animation 100s linear infinite;
-
 }
 
 #heading-name {
     font-size:100px;
     text-align: center;
     margin-top:230px;
+    color:#fff;
+}
+
+h2 {
+    color: yellow;
 }
 
 #wrapper {
