--- a/portfolio/src/pages/Home/home.css
+++ b/portfolio/src/pages/Home/home.css
@@ -32,6 +32,7 @@ button {
 
 #heading-name {
     font-size:100px;
+    font-family: 'Cormorant Garamond', serif;
     text-align: center;
     margin-top:230px;
     color:#fff;
