--- a/portfolio/src/pages/Contact/contact.css
+++ b/portfolio/src/pages/Contact/contact.css
@@ -8,3 +8,11 @@
     font-family: 'Cormorant Garamond', serif;
     font-size:100px;
 }
+
+#github-btn {
+    height: 4em;
+    width: 4em;
+}
+ h2 {
+     color:#000;
+ }
