--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,40 +1,15 @@
-@import 'antd/dist/antd.css';
-
-.App {
-  text-align: center;
+.navigation {
+  position: absolute;
+  display:flex;
+  justify-content: space-between;
+  top:10px;
+  left:10px;
+  height:100vh;
+  width:20%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li {
+  list-style: none;
+  font-size:25px;
+  margin:10px;
 }
