--- a/portfolio/src/pages/Projects/projects.css
+++ b/portfolio/src/pages/Projects/projects.css
@@ -1,28 +1,37 @@
 @import 'antd/dist/antd.css';
 
-#content {
-    height:1000px;
-    padding-left: 80px;
-    top:60px;
+.project-container {
+    position:fixed;
+    margin-left:35px;
+    top:0;
+    bottom:0;
+    right:0;
+    left: 225px;
 }
 
-#project-layout {
-
-    margin-left: 90px;
-
+.card {
+    margin-left:10px;
+    margin-right: 10px;
+    width:20%;
+    display: flex;
+    justify-content: space-between;
 }
 
-#project-title {
+.project-title {
+    position: fixed;
     font-size:100px;
-    text-align: center;
-    margin-top:230px;
+    text-align: left;
+    top:20%;
     color:#000;
     font-family: 'Cormorant Garamond', serif;
 }
 
 #project-cards {
-    display: flex;
-    justify-content: space-between;
-    margin-left:70px;
+    position: fixed;
+    top:50%;
+    left: 100px;
+    bottom:30%;
+    /* display: flex;
+    justify-content: space-between; */
     text-align:center;
 }
