--- a/portfolio/src/pages/About/about.css
+++ b/portfolio/src/pages/About/about.css
@@ -21,12 +21,17 @@
     font-weight:bold;
 }
 
+h3 {
+    color:#fff;
+}
+
 .about-link {
     border: 1px solid #000;
     border-radius: 30px;
     font-family: 'Cormorant Garamond', serif;
     padding:10px;
     margin:30px;
+    background-color:#000;
 }
 
 .about-link:hover {
@@ -34,6 +39,16 @@
     color:#fff;
     border: 1px solid red;
     border-radius:30px;
+}
+
+#skill:hover {
+    background-color: blue;
+    border: 1px solid blue;
+}
+
+#projects:hover {
+    background-color:green;
+    border: 1px solid green;
 }
 
 .bio {
